--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>GeometryWeb</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
+  <script src="https://unpkg.com/lucide@latest"></script>
 </head>
 <body>
-  <canvas id="gameCanvas" width="800" height="400"></canvas>
+  <div class="menu-container">
+    <h1 class="logo-text">GeometryWeb</h1>
+    <div class="main-buttons">
+      <button class="menu-btn" id="play-btn">▶ Play</button>
+    </div>
+    <div class="sub-buttons">
+      <button class="icon-btn" id="create-btn" title="Create Level">
+        <i data-lucide="plus-square"></i>
+      </button>
+      <button class="icon-btn" id="levels-btn" title="View Levels">
+        <i data-lucide="list"></i>
+      </button>
+      <button class="icon-btn" id="settings-btn" title="Settings">
+        <i data-lucide="settings"></i>
+      </button>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <script src="script.js"></script>
+  <script>
+    lucide.createIcons();
+  </script>
 </body>
 </html>
